--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "daisyui": "^3.9.4"
   },
   "peerDependencies": {
-    "astro": "^3.0.0"
+    "astro": "^3.0.0",
+    "lucide": "^0.291.0",
+    "class-variance-authority": "^0.7.0",
+    "tailwindcss": "^3.3.5"
+    
   },
   "dependencies": {
     "@astrojs/check": "^0.3.0",
     "@astrojs/tailwind": "^5.0.2",
     "class-variance-authority": "^0.7.0",
     "lucide": "^0.291.0",
-    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   }
 }
