--- a/package.json
+++ b/package.json
@@ -17,19 +17,15 @@
   ],
   "scripts": {},
   "devDependencies": {
-    "astro": "^3.4.1",
-    "daisyui": "^3.9.4"
+    "astro": "^3.4.1"
   },
   "peerDependencies": {
     "astro": "^3.0.0",
     "lucide": "^0.291.0",
-    "class-variance-authority": "^0.7.0",
-    "tailwindcss": "^3.3.5"
-    
+    "class-variance-authority": "^0.7.0"
   },
   "dependencies": {
     "@astrojs/check": "^0.3.0",
-    "@astrojs/tailwind": "^5.0.2",
     "class-variance-authority": "^0.7.0",
     "lucide": "^0.291.0",
     "typescript": "^5.2.2"
