--- a/package.json
+++ b/package.json
@@ -21,12 +21,10 @@
   },
   "peerDependencies": {
     "astro": "^3.0.0",
-    "lucide": "^0.291.0",
-    "class-variance-authority": "^0.7.0"
+    "lucide": "^0.291.0"
   },
   "dependencies": {
     "@astrojs/check": "^0.3.0",
-    "class-variance-authority": "^0.7.0",
     "lucide": "^0.291.0",
     "typescript": "^5.2.2"
   }
